# Bantarama

./: LICENSE  README.md  START_BANTARAMA_WINDOWS.bat  pyproject.toml
.github/workflows/: tests.yaml  tests.yml
docs/: BANTARAMA.md  DEVELOPMENT_PLAN.md  PLAYTEST_SHEET.md  RELEASE_CHECKLIST.md  TESTER_FEEDBACK_LOG.md  TESTER_SCRIPT.md
docs/demo-scenes/: 01-house-rules-mug-law.md  02-cult-laminated-prophecy.md  03-five-a-side-bib-var.md  04-relic-trial-spoon.md  05-under-stairs-breakthrough.md  06-chaos-council-remote.md  07-house-rules-cupboard.md  08-cult-biscuit-schism.md  09-relic-trial-chair.md  10-chaos-council-kettle.md  README.md
house_rules_app/: __init__.py  app.py  engine.py  storage.py
house_rules_app/seeds/: default_party.json
house_rules_app/static/: app.css  app.js
house_rules_app/templates/: index.html
scripts/: make_release_zip.ps1  sample_rounds.py  write_demo_scenes.py
tests/: test_app_smoke.py  test_engine.py  test_storage.py
