[project]
name = "bantarama-party"
version = "0.4.0"
description = "Local-first deterministic party chaos game."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bantarama" }]
dependencies = []

[project.scripts]
bantarama = "house_rules_app.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
